--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.19",
+    "clsx": "^2.0.0",
+    "framer-motion": "^10.15.2",
     "next": "13.4.15",
     "react": "18.2.0",
     "react-dom": "18.2.0"
