--- a/.gitignore
+++ b/.gitignore
@@ -29,9 +29,9 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# local .env files
+# local .env.local files
 .env*.local
-.env
+.env.local
 
 # vercel
 .vercel
