--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "dependencies": {
     "@studio-freight/lenis": "^1.0.19",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "framer-motion": "^10.15.2",
     "next": "13.4.15",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "server-only": "^0.0.1",
+    "zod": "^3.22.1"
   },
   "devDependencies": {
     "@types/node": "^20.5.0",
@@ -25,6 +28,7 @@
     "autoprefixer": "^10.4.15",
     "eslint": "^8.47.0",
     "eslint-config-next": "^13.4.15",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6"
