--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.1.1",
     "@studio-freight/lenis": "^1.0.19",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.15.2",
+    "js-confetti": "^0.11.0",
     "next": "13.4.15",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
@@ -30,6 +34,7 @@
     "eslint-config-next": "^13.4.15",
     "eslint-plugin-unused-imports": "^3.0.0",
     "postcss": "^8.4.27",
+    "prisma": "^5.1.1",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6"
   }
