--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "date-fns": "^2.30.0",
     "framer-motion": "^10.15.2",
     "js-confetti": "^0.11.0",
-    "next": "13.4.15",
+    "next": "^13.4.19",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
