--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "date-fns": "^2.30.0",
     "framer-motion": "^10.15.2",
     "js-confetti": "^0.11.0",
-    "next": "^13.5.2",
+    "next": "^14.0.1",
     "next-auth": "^4.22.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "server-only": "^0.0.1",
     "sharp": "^0.32.6",
     "zod": "^3.22.1"
@@ -33,7 +33,7 @@
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.15",
     "eslint": "^8.47.0",
-    "eslint-config-next": "^13.4.15",
+    "eslint-config-next": "^14.0.1",
     "eslint-plugin-unused-imports": "^3.0.0",
     "postcss": "^8.4.27",
     "prisma": "^5.1.1",
