--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^5.1.1",
     "@studio-freight/lenis": "^1.0.19",
     "clsx": "^2.0.0",
+    "cobe": "^0.6.3",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.15.2",
     "js-confetti": "^0.11.0",
@@ -23,6 +24,7 @@
     "next-auth": "^4.22.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-spring": "^9.7.3",
     "server-only": "^0.0.1",
     "sharp": "^0.32.6",
     "zod": "^3.22.1"
